more various fixes, improved code readability

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ html, body {
 
 .right-panel {
 	float: left;
-	width: 30%;
+	width: 530px;
 }
 
 #output-panel {
@@ -50,6 +50,7 @@ html, body {
 
 #gif-panel {
 	height: 270px;
+  width: 530px;
 }
 
 #console-output {
